--- a/ImageViewerDemo/ImageViewerDemo.vcxproj
+++ b/ImageViewerDemo/ImageViewerDemo.vcxproj
@@ -226,6 +226,9 @@
   <ItemGroup>
     <CudaCompile Include="Bayer2RGB.cu" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
