--- a/ImageViewerDemo/ImageViewerDemo.vcxproj.filters
+++ b/ImageViewerDemo/ImageViewerDemo.vcxproj.filters
@@ -65,4 +65,7 @@
   <ItemGroup>
     <CudaCompile Include="Bayer2RGB.cu" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
 </Project>
